<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/import_all_title"
		    android:layout_width="match_parent"
		    android:layout_height="60dp"
		    android:gravity="center"
		    android:textSize="20sp"
		    android:textColor="#000"
		    android:padding="15dp"
		    android:text="@string/import_all_title"/>
    <TextView
        android:id="@+id/import_all_message"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:text="@string/import_all_message"
        ></TextView>
    <LinearLayout
		android:id="@+id/dialog_action_view"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		
		>
		
           
 
		    <ImageButton 
		        android:layout_weight="1"
		        android:id="@+id/negative_button"
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:text="@string/cancel"
		       	android:textColor="@color/app_color"
		        android:background="@color/white"
		        android:layout_margin="10dp"
		        android:src="@drawable/reject"
		        android:contentDescription="@string/desc_image_button"
		       
	        />
		    <View
		         android:layout_marginTop="20dp"
      			 android:layout_width="1dp"
      			 android:layout_height="40dp" 
       			 android:background="#c1c1c1"/>
	    
	    	<ImageButton 
		        android:contentDescription="@string/desc_image_button"
		        android:layout_weight="1"
		        android:id="@+id/positive_button"
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:text="@string/add_item"
		      	android:textColor="@color/app_color"
		        android:background="@color/white"
		        android:layout_margin="10dp"
		        android:src="@drawable/accept"
	       />
   </LinearLayout>
</LinearLayout>
