<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/parent_container" 
     android:layout_height="fill_parent"
     android:layout_width="fill_parent">
   <RelativeLayout
       android:layout_height="match_parent"
       android:layout_width="match_parent"
       >
   		<FrameLayout
			    android:id="@+id/map_dialog"
			    android:background="#fff"
			    android:layout_width="match_parent"
			    android:layout_height="130dp"
			    android:layout_alignParentTop="true"
			     android:padding = "12dp"
			    >
			    <LinearLayout 
			        android:id="@+id/delivery_address_container"
			        android:orientation="vertical"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        >
				    <LinearLayout android:id="@+id/input_box_container"
				        android:orientation="horizontal"
				        android:layout_width="match_parent"
				        android:layout_height="60dp"
				        android:background="#fff">
						<EditText android:layout_weight="2"
						    android:id="@+id/delivery_address_input"
						    android:layout_width="wrap_content"
						    android:layout_gravity="top"
						    android:background="#fff"
						    android:padding="5dp"
						    android:textSize="16sp"
						    android:layout_height="wrap_content"
						    android:hint="@string/address_input_hint"
						    android:inputType="textCapWords|textMultiLine|textPostalAddress">
						    <requestFocus />
						</EditText>
						<Button android:layout_weight="1"
						    android:id="@+id/setDeliveryLocation"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:textColor="@color/app_color"
						    android:background="#fff"
						    android:padding = "5dp"
						    android:layout_margin="5dp"
						    android:text="@string/set_address"
						    
						    ></Button>
					</LinearLayout>
					<TextView
					    android:id="@+id/delivery_address_secondary"
					    android:layout_width="match_parent"
					    android:layout_height="50dp"
					    android:textSize="14sp"
					    android:layout_gravity="bottom"
					    android:padding="5dp"
					    android:background="#fff"
					    android:textColor="#222222"
					    ></TextView>
				</LinearLayout>
				<LinearLayout 
		            android:id="@+id/shop_details_view"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		           
		            android:orientation="horizontal"
		            android:background="#fff"
		            android:visibility="gone"
		            >
	            	
		            <LinearLayout 
		                android:id="@+id/shop_details_info"
		                android:layout_height="110dp"
		                android:layout_width="0dp"
		                android:padding="5dp"
		                android:layout_weight = "1"
		                android:background="#fff"
		                android:orientation="vertical">
		                 
		                <TextView
		                    android:id="@+id/shop_details_heading"
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:textSize="19sp"
		                    android:textColor="@color/app_color"
		                    
		                    >
		                    </TextView>
		                 <TextView
		                     android:id="@+id/shop_details_description"
		                     android:layout_width="fill_parent"
		                     android:layout_height="wrap_content"
		                     android:layout_marginTop="5dp"
		                     android:textSize="15sp"
		                     android:textColor="@color/app_color"
		                    
		                    ></TextView>
		                
		            </LinearLayout>
		            	
    			
		           <Button android:id="@+id/startShop"
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:layout_margin="10dp"
		               android:text="@string/shop"
		               android:layout_gravity="center_vertical"
		              	android:textColor="@color/app_color"
		               android:background="@drawable/button"
		               android:visibility="invisible"
		              ></Button>
	        	</LinearLayout>
	        	
				
	        </FrameLayout>
			
   
    <FrameLayout 
        	
     	    android:id="@+id/map_container"
     	    android:layout_width="fill_parent"
     	    android:layout_height="wrap_content" 
     	    android:layout_below="@+id/map_dialog"
     	    android:layout_alignParentBottom="true"
	        android:layout_margin="0dp"
	       >
	        <fragment
	        android:name="com.google.android.gms.maps.SupportMapFragment"
	        android:id="@+id/mapFragment"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent" 
	              
	        />
			
	      
	      
	        <ImageButton android:id="@+id/search_anchor_point"
		           android:contentDescription="@string/desc_image_button"
		           android:layout_gravity="center"
		           android:layout_height="wrap_content"
		           android:layout_width="wrap_content"
		           android:background="@drawable/home_yellow"
		           
		           >
	        </ImageButton>
	         <ImageButton
		            android:id="@+id/address_selector"
		            android:contentDescription="@string/desc_image_button"
		            android:layout_gravity="bottom|start"
		            android:layout_marginBottom="78dp"
		            android:layout_marginLeft="12dp"
		            android:layout_marginStart="12dp"
		            android:src="@drawable/home"
		            android:alpha="0.85"
		            android:visibility="gone"
		            android:layout_height="55dp"
			        android:layout_width="55dp"
			        
			        android:background="@drawable/button_round"
				></ImageButton>
	         
	         <ImageButton
	            android:id="@+id/location_selector"
	            android:contentDescription="@string/desc_image_button"
	            android:layout_gravity="bottom|start"
	            android:layout_margin="12dp"
	            android:src="@drawable/location"
	            android:alpha="0.85"
	            android:layout_height="55dp"
		        android:layout_width="55dp"
		        android:background="@drawable/location_button"
			></ImageButton>
	         <com.homelybuysapp.UI.ButteryProgressBar
   					 xmlns:app="http://schemas.android.com/apk/res-auto"
		    		android:layout_width="match_parent"
		    		android:layout_gravity="top"
       				android:layout_height="4dp"
       				android:id="@+id/map_progress_bar"
       				 />
        </FrameLayout>
			
</RelativeLayout>
<!--  <ImageButton
		            android:id="@+id/address_selector"
		            android:contentDescription="@string/desc_image_button"
		            android:layout_gravity="top|end"
		            android:layout_marginTop="100dp"
		            android:layout_marginRight="12dp"
		            android:layout_marginEnd="12dp"
		            android:src="@drawable/home"
		            android:alpha="0.85"
		            android:visibility="gone"
		            android:layout_height="60dp"
			        android:layout_width="60dp"
			        
			        android:background="@drawable/button_round"
				></ImageButton>-->
	       
</FrameLayout>
    

